# glpp

./: CMakeLists.txt  Grammar.bnf  README.md
.github/workflows/: ccpp.yml
examples/: scene.cpp  sorting.cpp
include/: common.h
include/graphics/: camera.h  debug.h  drawsettings.h  font.h  mesh.h  model.h  opengl.h  renderer.h  scene.h  shaders.h  shapes.h  shapetraits.h  sprite.h  text.h  texture.h  types.h  vertex.h
include/gui/: event.h  ui_element.h  window.h
include/plotting/: AST.h  BTree.h  coordinates.h  evaluation.h  parser.h  plot.h  tokenizer.h
include/simulation/: animation.h  particle.h  sandbox.h
resources/default/shaders/helloworld/: SimpleVertexShader.vs.glsl  UniformFragmentShader.fs.glsl
resources/default/shaders/lighting/dir1/: LightSource.fragmentshader.glsl  SimpleVertexShader.vertexshader.glsl
resources/default/shaders/lighting/dir2/: SimpleVertexShader.vertexshader.glsl  UniformFragmentShader.fragmentshader.glsl
resources/default/shaders/model/: SimpleVertexShader.vertexshader.glsl  UniformFragmentShader.fragmentshader.glsl
resources/default/shaders/mvp/: SimpleVertexShader.vs.glsl  UniformFragmentShader.fs.glsl
resources/default/shaders/textures/: SimpleVertexShader.vs.glsl  UniformFragmentShader.fs.glsl
resources/scene_shaders/: SimpleVertexShader.vs.glsl  UniformFragmentShader.fs.glsl
src/: animation.h  geometry.h  main.cpp  scene.h  shape.h
test/: bench.cpp  tests.cpp
